DELETE photos from DB and interface

--- a/mlocker.html
+++ b/mlocker.html
@@ -58,14 +58,14 @@
         <nav class="groupbar">
 <!--        <nav>-->
             <a id="gal" href="#gallery" style="width:49%; display:inline-block;" data-label="Gallery" class="current" data-icon="grid"></a>
-            <a id="edit" href="#gallery" style="width:49%; display:inline-block;" data-label="Edit" data-count="0" data-icon="pencil"></a>       
+            <a id="edit" href="#gallery" style="width:49%; display:inline-block;" data-label="Edit" data-icon="pencil"></a>       
         </nav>
 <!--            </footer>-->
         <!-- All my albums -->
         <article id="gallery" class="indented scroll">
             <div id="load"></div>
-            <a href="#" class="button blue" style="width:37%; display:inline-block;" data-label="Borrar" data-icon="remove"></a>
-            <a href="#" class="button blue" style="width:37%; display:inline-block;" data-label="Compartir" data-icon="share"></a>
+            <a id="delete" href="#" class="button blue" style="width:37%; display:inline-block;" data-label="Borrar" data-icon="remove"></a>
+            <a id="share" href="#" class="button blue" style="width:37%; display:inline-block;" data-label="Compartir" data-icon="share"></a>
 <!--
             <img class="shadow" src="imgs/plus.png">
             <img class="shadow" src="imgs/plus.png">
