--- a/mlocker.html
+++ b/mlocker.html
@@ -15,7 +15,7 @@
     <!-- Lungo - Stylesheets -->
     <link rel="stylesheet" href="components/style/lungo.css">
     <link rel="stylesheet" href="components/style/lungo.icon.css">
-    <link rel="stylesheet" href="components/style/lungo.icon.brand.css">
+<!--    <link rel="stylesheet" href="components/style/lungo.icon.brand.css">-->
     <link rel="stylesheet" href="components/style/lungo.theme.default.css">
     <!--<link rel="stylesheet" href="components/style/theme.lungo.css">   <!-- for 2.1 version -->
     <link rel="stylesheet" href="components/style/app.css">
@@ -54,22 +54,15 @@
             </nav>
         </header>
         
-<!--        <footer>-->
         <nav class="groupbar">
-<!--        <nav>-->
             <a id="gal" href="#gallery" style="width:49%; display:inline-block;" data-label="Gallery" class="current" data-icon="grid"></a>
             <a id="edit" href="#gallery" style="width:49%; display:inline-block;" data-label="Edit" data-icon="pencil"></a>       
         </nav>
-<!--            </footer>-->
         <!-- All my albums -->
         <article id="gallery" class="indented scroll">
             <div id="load"></div>
             <a id="delete" href="#" class="button blue" style="width:37%; display:inline-block;" data-label="Borrar" data-icon="remove"></a>
             <a id="share" href="#" class="button blue" style="width:37%; display:inline-block;" data-label="Compartir" data-icon="share"></a>
-<!--
-            <img class="shadow" src="imgs/plus.png">
-            <img class="shadow" src="imgs/plus.png">
--->
         </article>
         
         <article id="sets" class="list indented scroll">
